--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,10 @@
     },
     "dependencies": {
       "marked": "^12.0.2",
+      "pdfjs-dist": "5.4.296",
       "react": "^18.3.1",
       "react-dom": "^18.3.1",
+      "react-pdf": "10.3.0",
       "react-router-dom": "^6.26.2"
     },
     "devDependencies": {
